test: use Android-compatible source file reading in UI contracts
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>